--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Hotelaria
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Igt/zfcJU8IV0CUeVEoWQi3//Z+p63xjnAp2UXJTu+k=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_PORT=5432
+DB_DATABASE=hotelaria
+DB_USERNAME=postgres
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -24,6 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
+#CACHE_DRIVER=redis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
